[package]
edition = "2021"
name    = "compass"
version = "0.1.0"

[[bin]]
name = "compass"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32c6", "unstable"] }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time     = "0.4.0"
esp-hal-embassy  = { version = "0.8.1", features = ["esp32c6"] }
static_cell      = { version = "2.1.0", features = ["nightly"] }
ublox = { version = "0.6.0", default-features = false, features = ["ubx_proto27"]}
chrono = { version = "0.4.41", default-features = false }
micromath = "2.1.0"
blinksy = "0.8.0"
blinksy-esp = { version = "0.8.0", features = ["esp32c6"] }
ssd1306 = { version = "0.10.0" , features = ["async"] }
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
