[package]
edition = "2021"
name    = "compass"
version = "0.1.0"

[[bin]]
name = "compass"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32c6",
  "unstable"
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480"
] }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-hal-embassy = { version = "0.8.1", features = [
  "esp32c6",
  "log-04"
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
ublox = { version = "0.6.0", default-features = false, features = ["ubx_proto31"] }
chrono = { version = "0.4.41", default-features = false }
micromath = "2.1.0"
blinksy = "0.8.0"
blinksy-esp = { version = "0.8.0", features = ["esp32c6"] }
ssd1306 = { version = "0.10.0" , features = ["async"] }
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
arrform = "0.1.1"
defmt-rtt = "1.0.0"
log = "0.4.28"
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
qmc5883l = "0.0.1"
embedded-hal = "1.0.0"
geoconv = { version = "0.7.0", default-features = false, features = ["libm"] }
csv-core = "0.1.12"
# pcd8544 = "0.2.0"
pcd8544-hal = "0.1.0"
# edrv-hmc5883l = "0.0.1"

[build-dependencies]
toml = "0.9.6"
serde = "1.0.225"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
